@@ -1,5 +1,6 @@
 CVS HEAD:
  * user interface improvements:
+   * made connecting to a server show a dialog that allows the user to cancel it rather than blocking
    * added hotkey for cycle to previous unit (shift-N) (part of #10703)
    * added hotkey for hold position (shift-space) (patch 3994)
    * made the right Command key on Mac OS X work like the left one
